# ComfyUI_wav2lip

./: README.md  __init__.py  pyproject.toml  requirements.txt  wav2lip.py
ComfyUI-VideoHelperSuite-fix/: ComfyUI-VideoHelperSuite.7z
Wav2Lip/: README.md  audio.py  color_syncnet_train.py  cuda_requirements.txt  download_models.py  hq_wav2lip_train.py  infer.bat  inference.py  preprocess.py  requirements.txt  wav2lip_node.py  wav2lip_train.py
Wav2Lip/evaluation/: README.md  gen_videos_from_filelist.py  real_videos_inference.py
Wav2Lip/evaluation/scores_LSE/: SyncNetInstance_calc_scores.py  calculate_scores_LRS.py  calculate_scores_real_videos.py  calculate_scores_real_videos.sh
Wav2Lip/evaluation/test_filelists/: README.md  lrs2.txt  lrs3.txt  lrw.txt
Wav2Lip/face_detection/: api.py
basicsr/: train.py
basicsr/archs/: __init__.py  arcface_arch.py  arch_util.py  codeformer_arch.py  rrdbnet_arch.py  vgg_arch.py  vqgan_arch.py
basicsr/data/: __init__.py  data_util.py
basicsr/losses/: __init__.py  losses.py
basicsr/metrics/: __init__.py  metric_util.py  psnr_ssim.py
basicsr/models/: __init__.py
basicsr/utils/: logger.py  options.py  realesrgan_utils.py  registry.py
example/: wav2lip fix.json  wav2lip new.json  wav2lip+face_enhancer.json  wav2lip.json  wav2lip.json.json
facelib/detection/: __init__.py
facelib/detection/retinaface/: retinaface.py
facelib/detection/yolov5face/: face_detector.py
facelib/parsing/: __init__.py
facelib/utils/: face_restoration_helper.py  face_utils.py  misc.py
service/: degradations.py
(+5 files in other folders)
